--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <title>Queueless Restaurant</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Poppins', sans-serif; overflow-x: hidden; }
+        body { font-family: 'Poppins', sans-serif; overflow-x: hidden; background: #f8f9ff; }
         #root { min-height: 100vh; }
     </style>
 </head>
