--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <title>Queueless Restaurant</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Poppins', sans-serif; overflow-x: hidden; background: #f8f9ff; }
-        #root { min-height: 100vh; }
+        body { font-family: 'Poppins', sans-serif; overflow-x: hidden; }
+        #root { min-height: 100vh; width: 100%; }
     </style>
 </head>
 <body>
